Add new font and pwa functionalitues and icons

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -45,6 +45,19 @@ $base02-path: "/assets/fonts/base_02/Base02.ttf";
     font-style: normal;
 }
 
+@font-face {
+    font-family: TombRaider;
+    src: url("/assets/fonts/tombRaider/TombRaider.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: safeFromHarm;
+    src: url("/assets/fonts/safeFromHarm/safeFromHarm.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
 ////////////////
 // FONT WEIGHT
 ////////////////
