--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<organism-header *ngIf="isLogged"></organism-header>
+<organism-header *ngIf="router.url !== '/auth'"></organism-header>
 <div class="router-container" [@triggerName]="prepareRoute(outlet)">
   <router-outlet #outlet="outlet"></router-outlet>
 </div>
